# myurdfpy

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
config/: download_hf_models.yaml  visualize_urdf.yaml
run/: download_hf_models.py  visualize_urdf.py
src/myurdfpy/: __init__.py  urdf.py  urdf_rtb.py  utils.py  viz.py
src/myurdfpy/core/: ik.cpp  ik.h  linalg.cpp  main.cpp  main.h  methods.cpp  methods.h  structs.h
