[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "myurdfpy"
version = "0.1.0"
description = "A URDF parser"
authors = [
    { name = "Bowie375", email = "2200013174@stu.pku.edu.cn" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "six",
    "lxml",
    "trimesh",
    "omegaconf",
    "pydantic",
    "viser",
    "hydra-core",
    "huggingface_hub",
]

[project.optional-dependencies]
# Robotics-Toolbox backend (`src/myurdfpy/urdf_rtb.py`)
rtb = [
    "roboticstoolbox-python",
    "spatialgeometry",
]

# Convenience meta-extra
all = [
    "roboticstoolbox-python",
    "spatialgeometry",
]

[tool.setuptools.packages.find]
where = ["src"] 